deploy: 7b60fb50cc8cd21f5334b3951221440b9c14b7a3

--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -265,7 +265,7 @@
 
 <span class="c1">######################## TOP LEVEL CONSTANTS ######################################</span>
 
-<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.157.1"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
+<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.158.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
 <span class="n">DEBUG_START</span> <span class="o">=</span> <span class="kc">False</span>  <span class="c1"># Whether to start directly in debug map</span>
 
 <span class="n">MAX_SKILLS</span> <span class="o">=</span> <span class="mi">6</span>
@@ -293,6 +293,7 @@
 <span class="n">ASSET_PATH</span> <span class="o">=</span> <span class="n">ROOT_PATH</span> <span class="o">/</span> <span class="s2">"assets/"</span>
 <span class="n">IMAGE_NOT_FOUND_PATH</span> <span class="o">=</span> <span class="n">ASSET_PATH</span> <span class="o">/</span> <span class="s2">"debug/image_not_found.png"</span>
 <span class="n">SAVE_PATH</span> <span class="o">=</span> <span class="n">DATA_PATH</span> <span class="o">/</span> <span class="s2">"saves/"</span>
+<span class="n">UI_PATH</span> <span class="o">=</span> <span class="n">DATA_PATH</span> <span class="o">/</span> <span class="s2">"ui/"</span>
 
 <span class="c1">######################## NEW TYPES ######################################</span>
 <span class="c1"># NewType guarantees you don't accidentally pass in a normal str instead of a value explicitly defined as a member of</span>
