--- a/genindex.html
+++ b/genindex.html
@@ -2432,6 +2432,8 @@
 </li>
       <li><a href="engine/internal/library.html#scripts.engine.internal.library.refresh_library">refresh_library() (in module scripts.engine.internal.library)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.library.refresh_library">[1]</a>
 </li>
+      <li><a href="nqp/elements/skill_bar.html#scripts.nqp.ui_elements.skill_bar.SkillBar.refresh_skills">refresh_skills() (SkillBar method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.skill_bar.SkillBar.refresh_skills">[1]</a>
+</li>
       <li><a href="nqp/elements/dungen_viewer.html#scripts.nqp.ui_elements.dungen_viewer.DungenViewer.refresh_viewer">refresh_viewer() (DungenViewer method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.dungen_viewer.DungenViewer.refresh_viewer">[1]</a>
 </li>
       <li><a href="engine/internal/action.html#scripts.engine.internal.action.register_action">register_action() (in module scripts.engine.internal.action)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.register_action">[1]</a>
