--- a/_modules/scripts/engine/internal/event.html
+++ b/_modules/scripts/engine/internal/event.html
@@ -314,6 +314,15 @@
 <span class="sd">        """</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">subscribers</span><span class="p">[</span><span class="n">event_type</span><span class="p">]</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">subscriber</span><span class="p">)</span></div>
 
+<div class="viewcode-block" id="EventHub.peek"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.event.EventHub.peek">[docs]</a>    <span class="k">def</span> <span class="nf">peek</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">event</span><span class="p">):</span>
+        <span class="sd">"""</span>
+<span class="sd">        Check if an event exists in the queue.</span>
+<span class="sd">        """</span>
+        <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">events</span><span class="p">:</span>
+            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">e</span><span class="p">,</span> <span class="n">event</span><span class="p">):</span> <span class="c1">#type: ignore</span>
+                <span class="k">return</span> <span class="kc">True</span>
+        <span class="k">return</span> <span class="kc">False</span></div>
+
 <div class="viewcode-block" id="EventHub.update"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.event.EventHub.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">"""</span>
 <span class="sd">        Notify subscribers of their registered event.</span>
